force-app/main/default/objects/Order/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <label>Customer PO</label>
    <type>TextArea</type>
</CustomField>