force-app/main/default/objects/Order/fields/Customer_Requested_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requested_Ship_Date__c</fullName>
    <label>Customer Requested Ship Date</label>
    <type>Date</type>
</CustomField>