force-app/main/default/objects/Order/fields/Customer_RFQ__c.field-meta.xml
<CustomField>
    <fullName>Customer_RFQ__c</fullName>
    <label>Customer RFQ</label>
    <type>TextArea</type>
</CustomField>