force-app/main/default/objects/Order/fields/Date_Order_put_on_Credit_Hold__c.field-meta.xml
<CustomField>
    <fullName>Date_Order_put_on_Credit_Hold__c</fullName>
    <label>Date Order put on Credit Hold</label>
    <type>Date</type>
</CustomField>