force-app/main/default/objects/Order/fields/ERP_Account__c.field-meta.xml
<CustomField>
    <fullName>ERP_Account__c</fullName>
    <label>ERP Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>