force-app/main/default/objects/Order/fields/ERP_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Status__c</fullName>
    <label>ERP Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>