force-app/main/default/objects/Order/fields/ERP_Shipping_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_Shipping_Code__c</fullName>
    <label>ERP Shipping Code Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>