force-app/main/default/objects/Order/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <label>ExpirationDate</label>
    <type>DateTime</type>
</CustomField>