force-app/main/default/objects/Order/fields/My_Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>My_Currency_Amount__c</fullName>
    <formula>GrandTotal__c  *  Base_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Currency Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>