force-app/main/default/objects/Order/fields/On_Order_Balance__c.field-meta.xml
<CustomField>
    <fullName>On_Order_Balance__c</fullName>
    <label>On Order Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>