force-app/main/default/objects/Order/fields/Order_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Order_Credit_Limit__c</fullName>
    <label>Order Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>