force-app/main/default/objects/Order/fields/Reason_on_Credit_Hold__c.field-meta.xml
<CustomField>
    <fullName>Reason_on_Credit_Hold__c</fullName>
    <label>Reason on Credit Hold</label>
    <length>40</length>
    <type>Text</type>
</CustomField>