force-app/main/default/objects/Order/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reseller Orders</relationshipLabel>
    <relationshipName>ResellerOrders</relationshipName>
    <type>Lookup</type>
</CustomField>