force-app/main/default/objects/Order/fields/Ship_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Email__c</fullName>
    <label>Ship To Email</label>
    <type>Email</type>
</CustomField>