force-app/main/default/objects/Order/fields/Ship_To_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Phone__c</fullName>
    <label>Ship To Phone</label>
    <type>Phone</type>
</CustomField>