force-app/main/default/objects/Order/fields/Shipped_Status__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipped Status</label>
    <type>Checkbox</type>
</CustomField>